tests/baselines/reference/parserWithStatement2.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement2.ts(1,1): error TS2410: Unsupported 'with' statement, all symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement2.ts (1 errors) ====
    with (1)
    ~~~~~~~~
!!! error TS2410: Unsupported 'with' statement, all symbols within a 'with' block will be resolved to 'any'.
      return;